--- a/package.json
+++ b/package.json
@@ -41,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://iinsue.github.io/nomad-react"
+  "homepage": "https://iinsue.github.io/is-react-todolist"
 }
